--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -10,20 +10,19 @@ permissions:
   id-token: write
   contents: read
 
-job:
+jobs:
   sync:
-  runs-on: ubuntu-latest
-  steps:
-    - name: Checkout Repo
-      uses: actions/checkout@v2
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@v2
 
-    - name: Connect to AWS
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        role-session-name: awssyncsession
-        role-to-assume: ${{ secrets.AWS_IAM_ROLE }}
-        aws-region: ${{ secrets.AWS_REGION }}
+      - name: Connect to AWS
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-session-name: awssyncsession
+          role-to-assume: ${{ secrets.AWS_IAM_ROLE }}
+          aws-region: ${{ secrets.AWS_REGION }}
 
-    - name: sync bucket
-      run: aws s3 sync ./file/ s3://{{ secrets.AWS_BUCKET_NAME }} --delete
-      
+      - name: sync bucket
+        run: aws s3 sync ./file/ s3://{{ secrets.AWS_BUCKET_NAME }} --delete
